fix dark mode bug

--- a/src/app/(main)/globals.css
+++ b/src/app/(main)/globals.css
@@ -8,15 +8,28 @@ html, body {
   overflow-x: hidden;
 }
 
+@layer base {
+  :root {
+    --foreground: theme(colors.stone.800);
+    --background: theme(colors.white)
+  }
+
+  .dark {
+    --foreground: theme(colors.stone.200);
+    --background: theme(colors.stone.900)
+  }
+
+  body {
+    background-color: var(--background);
+    color: var(--foreground);
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
 
   font-family: Macon, Monaco, monaco, Consolas, Lucida Console, monospace;
-}
-
-.title {
-  font-size: 1.6em;
 }
 
 .tooltip > .tooltip-child {
@@ -25,15 +38,5 @@ html, body {
 
 .tooltip:hover > .tooltip-child {
   display: block;
-}
-
-.message-container {
-  position: fixed;
-  left: 1rem;
-  bottom: 1rem;
-  gap: 0.6rem;
-  display: flex;
-  flex-direction: column-reverse;
-  z-index: 10;
 }
 
